[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/BoxPressurePlate.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 2.5, 0.1, 2.5 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.606793, 0.107002, 0.608977 )

[node name="BoxPressurePlate" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.999888, 0.0149744, 0, -0.0149744, 0.999888, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.302259, 0 )
collision_layer = 16
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 3 )

[node name="Rim" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="Rim"]
width = 3.0
height = 0.5
depth = 3.0

[node name="CSGBox2" type="CSGBox" parent="Rim/CSGBox"]
operation = 2

[node name="CSGCylinder" type="CSGCylinder" parent="Rim/CSGBox"]
operation = 1
radius = 2.0

[node name="BoxPos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53898, 0 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
